<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/memverse_detail"
              style="?android:attr/textAppearanceLarge"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
              tools:context="com.memverse.android.review.ReviewFragment">

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_showFullText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/action_show_full_text"
        android:switchPadding="16dp"/>

    <ViewSwitcher
        android:id="@+id/viewSwitcher_showFullText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/editText_guess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:freezesText="true"
            android:contentDescription="@string/desc_editText_guess"
            tools:ignore="LabelFor"/>

        <EditText
            android:id="@+id/textView_fullText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textIsSelectable="true"
            tools:ignore="LabelFor"/>

    </ViewSwitcher>

    <LinearLayout
        android:id="@+id/toolbar_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1"/>

        <android.support.v4.widget.Space
            android:id="@+id/space_toolbarReview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/button_goToNextVerse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:src="@android:drawable/ic_media_next"
            android:contentDescription="@string/action_go_to_next_verse"/>

    </LinearLayout>

</LinearLayout>