<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_nav_review"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/title_review"/>
        <item
            android:id="@+id/menu_item_nav_list"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/title_list"/>
    </group>
</menu>
