<resources>
    <string name="app_name">Memverse</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_review">Review</string>
    <string name="action_show_full_text">Show full text</string>
    <string name="message_review_correct">Correct! Rate the verse to move on.</string>
    <string name="desc_profile_avatar">Profile avatar</string>
    <string name="title_list">Verse List</string>
    <string name="desc_editText_guess">Enter your guess here</string>
    <string name="action_go_to_next_verse">Go to next verse</string>
</resources>
