<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recyclerView_memversesList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:scrollbars="vertical"
    android:scrollbarStyle="outsideOverlay"
    app:layoutManager="LinearLayoutManager"
    tools:listitem="@android:layout/two_line_list_item"
    tools:context="com.memverse.android.list.MemversesListFragment"/>